step 2 registration complete

--- a/armen-finance project/front-end/register.html
+++ b/armen-finance project/front-end/register.html
@@ -19,7 +19,7 @@
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <title>registration</title>
 </head>
-<body>
+<body class="text-monospace">
 
     <!-- login body  -->
    <div class="container">
