--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,7 +11,7 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <!-- main.css file  -->
-    <link rel="stylesheet" type="text/css" href="./static/main.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css">
 
     <!-- jquery and popper cdn -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
