--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./static/main.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css">
 
     <!-- bootstrapcdn  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
