--- a/frontend/login.html
+++ b/frontend/login.html
@@ -58,7 +58,7 @@
           <div class="col-lg-8">
             <div class="row">
               <div class="col-lg-6" id="logo-column">
-                <img src="./static/img/logo-top2.png" style="width: 280px;" class="login-logo">
+                <img src="./static/img/logo_transparent.png" style="width: 280px;" class="login-logo">
               </div>
               <div class="col-lg-6" id="form-column">
                 <div class="card-body"> 
