--- a/frontend/about-us.html
+++ b/frontend/about-us.html
@@ -4,29 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- bootstrapcdn  -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
     <!-- jquery and popper cdn -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+
+    <!-- bootstrapcdn  -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <!-- css linked file  -->
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css">
     <title>about us</title>
 </head>
-<body>
+<body class="text-monospace">
+        <!-- navigation menu  -->
+         <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">armen-finance</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    
 
-    <!-- login body  -->
-   <div class="container-fluid">
-       <div class="row">
-           <div class="col">
-                <h2 class="text-center"></h2>
+
+        <div class="col-lg">
+            <div class="row">
+                <div class="col">
+                        <h2 class="text-center">About Armen-finance</h2>
+                </div>
+            </div>
+        </div>
+       <div class="col-lg bg-white">
+         <div class="row m-5">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+                <br>
+                <br>
+                <br>
+               <p class="about-armen"><span class="text-primary text-uppercase">Armen-finance</span> a secure trading environment which permits traders
+               </p> 
+               <p class="about-armen text-center">to trade exclusively online.</p>
+               <br>
+               <br>
+               <br>
            </div>
+           <div class="col-lg-2"></div>
+        </div>
+      </div>
+      <div class="col-lg">
+          <div class="row">
+              <div class="col-lg">
+                  <img src="./static/img/about-left.png" alt="">
+              </div>
+              <div class="col-lg m-5">
+                  <p>
+                    Armen-finance is a legally operating company in the UK and US. We were one of the first to invest in cryptocurrencies.
+                    Armen-finance is a leading blockchain investment company. Our mission is to act as a catalyst for universal adoption and blockchain innovation.
+                    We focus only on investing in blockchain technologies. Our team has experience in both traditional financing and emerging blockchain technology.
+                    We invest, among others, in cryptocurrencies such as BTC, XRP, ETC, and ETH. We also give a chance to new
+                    , dynamically developing ICO projects that bring huge profits in an amazingly short time.
+                    <br>
+                    <br>
 
-       </div>
-   </div> 
+                    Our team consists only of qualified people connected with the financial industry for years,
+                    who are also passionate about the fledgling but very strong cryptocurrency market and blockchain technology.
+                    They constantly monitor the market to provide you - our investors with even greater profits.
+                    Having strong relationships with the most promising entrepreneurs and other leading investors in the industry,
+                    Armen-finance implements an investment strategy, building a diversified portfolio and adjusting the added value to its portfolio companies.
+                  </p>
+              </div>
+              <div class="col-lg-1"></div>
+              <!-- footer section -->
+              <div class="row">
+                  <div class="col-lg-3">
+                      <img src="./static/img/logo_transparent.png" alt="footer image" width="70%">
+                      <p>We are committed to being a driving force in the cryptocurrency trading revolution by increasing adoption of this innovative technology around the world. Using our streamlined trade listing process, we will advance new, innovative cryptocurrency projects that could potentially transform the way goods, services and operations are managed globally.
+                        <br>
+                        Copyright © 2020 All rights reserved Bitzbase</p>
+                  </div>
+                  <div class="col-lg-3 -m3">
+                      <h3 class="text-uppercase">quick links</h3>
+                      <ul>
+                          <li><a href="#">Login</a></li>
+                          <li><a href="#">Sign up</a></li>
+                          <li><a href="#">About</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-lg-3">
+                      <h3 class="text-uppercase">get in touch</h3>
+                      support@armen-finance.com
+                  </div>
+                  <div class="col-lg-3">
+                      <h3 class="text-uppercase">subscribe to our newsletter</h3>
+                        <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                            <button class="btn float-right">@</button>
+                            </div>
+                            <input type="text" class="form-control" id="inlineFormInputGroupEmail2" placeholder="Email address">
+                        </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
 </body>
 </html>
