homepage update: mobile view in development

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,12 +78,12 @@
                     <div class="home-login-bg">
                         <form action="" >
                             <!-- online id form -->
-                            <input type="text" class="form-control flat" placeholder="Online ID">
+                            <input type="text" class="form-control flat form-transparent" placeholder="Online ID">
                             <!-- password form -->
-                            <input type="password" class="form-control flat" placeholder="Input Password">
+                            <input type="password" class="form-control flat form-transparent" placeholder="Input Password">
 
                             <input type="checkbox" > Save Online ID
-                            <button class="btn btn-outline-dark btn-block" type="button">LOGIN</button>
+                            <a class="btn btn-outline-dark btn-block flat" id="login-home-button">LOGIN</a>
                         </form>
                     </div>
                 </div>
