--- a/frontend/about-us.html
+++ b/frontend/about-us.html
@@ -17,115 +17,146 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!-- css linked file  -->
     <link rel="stylesheet" type="text/css" href="./static/css/main.css">
+    <link rel="stylesheet" href="./static/css/style.css">
     <title>about us</title>
+    <link rel="shortcut icon" href="/static/img/logo.png" type="image/x-icon">
 </head>
 <body class="text-monospace">
-        <!-- navigation menu  -->
-         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">armen-finance</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+    
+      <!-- navigation -->
+  <nav class="navigation">
+      <div class="container">
+          <div class="row">
+
+              <!-- icon -->
+              <div class="col-1">
+                  <span class="fas fa-bars" id="nav-menu-icon"></span>
+              </div>
+              <!-- open an account nav -->
+              <div class="col-2" id="open-account-nav">
+                  <a href="index.html" class="">Open an account <span class="pl-3 fas fa-chevron-down"></span></a>
+              </div>
+              <!-- logo -->
+              <div class="col-5" id="logo-nav">
+                  <!-- <h3>Armen Finance</h3> -->
+                  <!-- insert logo her -->
+                  <img src="./static/img/logo_transparent.png" alt="">
+              </div>
+
+              <!-- about us and search bar -->
+              <div class="col-lg-4" id="about-us-nav">
+                  <a href="about-us.html">About Us</a>
+                  <a href="">
+                      <span class="fas fa-search"></span>
+                  </a>
+              </div>
+
+          </div>
+      </div>        
+  </nav> 
     
 
+    <div class="about-img1">
+        <div class="ptext">
+            <span class="border">
+               About Armen-finance
+            </span>
+        </div>
+    </div>
 
-        <div class="col-lg">
+    <section class="section section-light">
+        <p class="about-armen"><span class="text-primary text-uppercase">Armen-finance</span> a secure trading environment which permits traders
+        </p> 
+        <p class="about-armen text-center">to trade exclusively online.</p>
+    </section>
+
+    <div class="about-img2">
+        <div class="ptext">
+            <span class="border trans">
+                Armen-finance
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <p>  Armen-finance is a legally operating company in the UK and US. We were one of the first to invest in cryptocurrencies.
+            Armen-finance is a leading blockchain investment company. Our mission is to act as a catalyst for universal adoption and blockchain innovation.
+            We focus only on investing in blockchain technologies. Our team has experience in both traditional financing and emerging blockchain technology.
+            We invest, among others, in cryptocurrencies such as BTC, XRP, ETC, and ETH. We also give a chance to new
+            , dynamically developing ICO projects that bring huge profits in an amazingly short time.</p>
+    </section>
+
+    <div class="about-img3">
+        <div class="ptext">
+            <span class="border trans">
+                Armen-finance
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <p>Our team consists only of qualified people connected with the financial industry for years,
+        who are also passionate about the fledgling but very strong cryptocurrency market and blockchain technology.
+        They constantly monitor the market to provide you - our investors with even greater profits.
+        Having strong relationships with the most promising entrepreneurs and other leading investors in the industry,
+        Armen-finance implements an investment strategy, building a diversified portfolio and adjusting the added value to its portfolio companies.</p>
+    </section>
+
+    <!-- footer -->
+    <footer id="footer-bg">
+        <div class="container">
             <div class="row">
-                <div class="col">
-                        <h2 class="text-center">About Armen-finance</h2>
+                <!-- about armen finance footer section -->
+                <div class="col-lg-4" id="footer-logo">
+                    <!-- insert logo here -->
+                    <img src="./static/img/logo_transparent.png" alt="">
+                    <p>
+                        We are committed to being a driving force in the cryptocurrency trading revolution by increasing adoption of this innovative technology around the world.
+                        Using our streamlined trade listing process, we will advance new, 
+                        innovative cryptocurrency projects that could potentially transform the way goods, services and operations are managed globally.
+                    </p>
+                </div>
+
+                <!-- Account types -->
+                <div class="col-lg-4" id="choose-wrfy-footer">
+                    <h3>Choose What's Right For You</h3>
+
+                    <!-- schedule a meeting -->
+                    <a href="">
+                        Schedule a meeting
+                    </a>
+                    <!-- checking accounts -->
+                    <a href="">
+                        Checking Accounts
+                    </a>
+                    <!-- invest -->
+                    <a href="">
+                        Invest
+                    </a>
+                    <!-- find a credit card -->
+                    <a href="">
+                        Find a Credit Card
+                    </a>
+                    <!-- home lending -->
+                    <a href="">
+                        Home Lending
+                    </a>
+                    <!-- savings account -->
+                    <a href="">
+                        Savings Account
+                    </a>
+                </div>
+
+                <!-- security badges-->
+                <div class="col-lg-4" id="security-badge">
+                    <h3>Backed by</h3>
+                    <img src="./static/img/badge.png" alt="">
                 </div>
             </div>
         </div>
-       <div class="col-lg bg-white">
-         <div class="row m-5">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <br>
-                <br>
-                <br>
-               <p class="about-armen"><span class="text-primary text-uppercase">Armen-finance</span> a secure trading environment which permits traders
-               </p> 
-               <p class="about-armen text-center">to trade exclusively online.</p>
-               <br>
-               <br>
-               <br>
-           </div>
-           <div class="col-lg-2"></div>
-        </div>
-      </div>
-      <div class="col-lg">
-          <div class="row">
-              <div class="col-lg">
-                  <img src="./static/img/about-left.png" alt="">
-              </div>
-              <div class="col-lg m-5">
-                  <p>
-                    Armen-finance is a legally operating company in the UK and US. We were one of the first to invest in cryptocurrencies.
-                    Armen-finance is a leading blockchain investment company. Our mission is to act as a catalyst for universal adoption and blockchain innovation.
-                    We focus only on investing in blockchain technologies. Our team has experience in both traditional financing and emerging blockchain technology.
-                    We invest, among others, in cryptocurrencies such as BTC, XRP, ETC, and ETH. We also give a chance to new
-                    , dynamically developing ICO projects that bring huge profits in an amazingly short time.
-                    <br>
-                    <br>
-
-                    Our team consists only of qualified people connected with the financial industry for years,
-                    who are also passionate about the fledgling but very strong cryptocurrency market and blockchain technology.
-                    They constantly monitor the market to provide you - our investors with even greater profits.
-                    Having strong relationships with the most promising entrepreneurs and other leading investors in the industry,
-                    Armen-finance implements an investment strategy, building a diversified portfolio and adjusting the added value to its portfolio companies.
-                  </p>
-              </div>
-              <div class="col-lg-1"></div>
-              <!-- footer section -->
-              <div class="row">
-                  <div class="col-lg-3">
-                      <img src="./static/img/logo_transparent.png" alt="footer image" width="70%">
-                      <p>We are committed to being a driving force in the cryptocurrency trading revolution by increasing adoption of this innovative technology around the world. Using our streamlined trade listing process, we will advance new, innovative cryptocurrency projects that could potentially transform the way goods, services and operations are managed globally.
-                        <br>
-                        Copyright © 2020 All rights reserved Bitzbase</p>
-                  </div>
-                  <div class="col-lg-3 -m3">
-                      <h3 class="text-uppercase">quick links</h3>
-                      <ul>
-                          <li><a href="#">Login</a></li>
-                          <li><a href="#">Sign up</a></li>
-                          <li><a href="#">About</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-lg-3">
-                      <h3 class="text-uppercase">get in touch</h3>
-                      support@armen-finance.com
-                  </div>
-                  <div class="col-lg-3">
-                      <h3 class="text-uppercase">subscribe to our newsletter</h3>
-                        <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                            <button class="btn float-right">@</button>
-                            </div>
-                            <input type="text" class="form-control" id="inlineFormInputGroupEmail2" placeholder="Email address">
-                        </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+    </footer>
+      <!-- script  -->
+      <script src="./static/js/main.js"></script>
 
 </body>
 </html>
