--- a/frontend/register-step2.html
+++ b/frontend/register-step2.html
@@ -39,7 +39,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-2"></div>
-              <div class="col-lg-8">
+              <div class="col-lg-8 registration-div">
                 <div class="card-body registration-card">
                    <form>
                      <div class="form-group">
