--- a/frontend/login-2.html
+++ b/frontend/login-2.html
@@ -7,11 +7,10 @@
   <meta name="description" content="">
   <meta name="author" content="Dashboard">
   <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
-  <title>Dashio - Bootstrap Admin Template</title>
+  <title>Armen-finance - Login dashboard</title>
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/static/img/logo.png" rel="icon">
 
   <!-- Bootstrap core CSS -->
   <link href="./static/dashboard/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
