--- a/frontend/register-step2.html
+++ b/frontend/register-step2.html
@@ -18,6 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <title>registration</title>
+    <link rel="shortcut icon" href="/static/img/logo.png" type="image/x-icon">
 </head>
 <body class="text-monospace">
 
