--- a/frontend/transaction-list.html
+++ b/frontend/transaction-list.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://crypto-admin-templates.multipurposethemes.com/sass/images/favicon.ico">
 
-    <title>Crypto Admin - Responsive Bootstrap Admin HTML Templates + Bitcoin Dashboards + ICO </title>
+    <title>Armen-finance | transaction-list</title>
     
 	<!-- Bootstrap 4.0-->
 	<link rel="stylesheet" href="http://crypto-admin-templates.multipurposethemes.com/sass/assets/vendor_components/bootstrap/dist/css/bootstrap.css">
