--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
 
     <!-- custom script tag -->
-    <script src="/static/js/main.js"></script>
+    <script src="./static/js/main.js"></script>
 
 </head>
 <body>
