--- a/frontend/activation-sent.html
+++ b/frontend/activation-sent.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 mail-sent-container text-center">
-                <img src="./static/img/mail-sent.svg" alt="" class="mail-sent-img">
+                <img src="/static/img/mail-sent.svg" alt="" class="mail-sent-img">
                     <h3>HI!,Welcome To Armen Finance</h3>
                     <p>Please, Check your Email to Activate Your Account</p>
             </div>
