--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,11 +8,14 @@
 
     <link rel="shortcut icon" href="./static/img/logo.png" type="image/x-icon">
     <!-- jquery and popper cdn -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
     <!-- bootstrapcdn  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -110,7 +113,7 @@
                     <img src="./static/img/banner-wallpaper.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./static/img/Luxury-Life-Wallpaper-Billionaire-Lifestyle,-Hd-Wallpapers-.jpg" class="d-block w-100" alt="...">
+                    <img src="./static/img/Luxury-Life-Wallpaper-Billionaire-Lifestyle,-Hd-Wallpapers-.jpg" class="d-block h-50">
                 </div>
                 <div class="carousel-item">
                     <img src="./static/img/pexels-andrea-piacquadio-840996.jpg" class="d-block w-100" alt="...">
@@ -257,7 +260,55 @@
     </div>
     <!-- //about manager -->
     <!-- gallery -->
-    <div class="col-lg gallery">
+    <div class="container text-center">
+        <h3 class="text-center testimonials-heading"><span class="text-primary">G</span>allery</h3>
+        <div class="row">
+            <!-- owl carousel -->
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/g1.jpg" alt="" class="gallery-image">
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/g4.jpg" alt="" class="gallery-image">
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/g2.jpg" alt="" class="gallery-image">
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/pexels-snapwire-618613.jpg" alt="" class="gallery-image">
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/pexels-andrea-piacquadio-840996.jpg" alt="" class="gallery-image">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/g6.jpg" alt="" class="gallery-image">
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="choose-wrfy">
+                        <img src="./static/img/g5.jpg" alt="" class="gallery-image" height="50px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="col-lg gallery">
         <h3 class="text-center">
             <span class="text-primary">G</span>allery
         </h3>
@@ -285,7 +336,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- //gallery -->
     <!-- testimonials -->
     <div class="col-lg testimonials">
@@ -337,7 +388,8 @@
                 </div>
                 <div class="col-md-6">
                     <h3 id="unltd-comm-header">Unlimited Commission-Free Online Trades</h3>
-                    <p id="unltd-comm-body" class="my-5">Trade on your own: Open and fund an <strong>Armen Finance</strong> self-directed investment account.</p>
+                    <p id="unltd-comm-body" class="my-5">Trade on your own: Open and fund an <strong>Armen
+                            Finance</strong> self-directed investment account.</p>
                     <a href="" class="btn btn-primary">
                         Open an Account
                     </a>
