new feture added on landing page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,10 +38,8 @@
 </head>
 
 <body>
-
-
-    <!-- banner -->
-    <div class="">
+    <!-- desktop banner -->
+    <div class="mobile">
         <!-- navigation -->
         <nav class="navigation desktop">
             <div class="container">
@@ -53,7 +51,137 @@
                     </div>
                     <!-- open an account nav -->
                     <div class="col-2" id="open-account-nav">
-                      <a href="register.html" class="">Open an account</a>
+                        <a href="register.html" class="">Open an account</a>
+                    </div>
+                    <!-- logo -->
+                    <div class="col-5" id="logo-nav">
+                        <!-- <h3>Armen Finance</h3> -->
+                        <!-- insert logo her -->
+                        <img src="./static/img/logo_transparent.png" alt="">
+                    </div>
+
+                    <!-- about us and search bar -->
+                    <div class="col-lg-4" id="about-us-nav">
+                        <a href="">About Us</a>
+                        <a href="">
+                            <span class="fas fa-search"></span>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
+        <!-- sidebar content -->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="{% url 'main:login' %}">Login</a>
+            <a href="{% url 'main:register' %}">Signup</a>
+            <a href="{% url 'main:about' %}">About</a>
+            <a href="{% url 'main:contact' %}">Contact</a>
+        </div>
+        <!-- navigation -->
+        <nav class="navigation mobile">
+            <div class="container">
+                <div class="row">
+
+                    <!-- icon -->
+                    <div class="col-1">
+                        <span class="fas fa-bars" id="nav-menu-icon" onclick="openNav()"></span>
+
+                    </div>
+                    <!-- logo -->
+                    <div class="col-5" id="logo-nav">
+                        <!-- <h3>Armen Finance</h3> -->
+                        <!-- insert logo her -->
+                        <img src="./static/img/logo_transparent.png" alt="">
+                    </div>
+
+                    <!-- LOGIN -->
+                    <div class="col-4" id="about-us-nav">
+                        <a href="" class="btn btn-outline-success px-4">LOGIN</a>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
+        <!-- end of navigation -->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./static/img/banner-wallpaper-mobile.jpg" class="w-100" alt="...">
+                    <div class="carousel-caption d-md-block">
+                        <h5>New Armen Finance Customers:</h5>
+                        <p>Open a New Armen Account and set Up Direct Deposit</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./static/img/mobile-money.jpg" class="w-100">
+                    <div class="carousel-caption d-md-block">
+                        <h5>New Armen Finance Customers:</h5>
+                        <p>Open a New Armen Account and set Up Direct Deposit</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./static/img/mobile-img-2.jpg" class="w-100" alt="...">
+                    <div class="carousel-caption d-md-block">
+                        <h5>New Armen Finance Customers:</h5>
+                        <p>Open a New Armen Account and set Up Direct Deposit</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- login form -->
+                    <div class="col-lg-3 desktop">
+                        <div class="home-login-bg">
+                            <form action="">
+                                <!-- online id form -->
+                                <input type="text" class="form-control flat form-transparent" placeholder="Online ID">
+                                <!-- password form -->
+                                <input type="password" class="form-control flat form-transparent" placeholder="Input Password">
+
+                                <input type="checkbox"> Save Online ID
+                                <a class="btn btn-outline-dark btn-block flat" id="login-home-button">LOGIN</a>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- promotional offer -->
+                    <div class="col-3 desktop" id="promotional-offer-banner">
+                        <h3>Enjoy</h3>
+                        <span><sup>$</sup>200</span>
+                    </div>
+
+                    <div class="col-3 mr-4 mobile" id="promotional-offer-banner">
+                        <h3>Enjoy</h3>
+                        <span><sup>$</sup>200</span>
+                    </div>
+
+                    <!-- create account  -->
+                    <div class="col-6" id="create-account-banner">
+                        <!-- new customers title -->
+                        <h3>New Armen Finance Customers:</h3>
+                        <a href="" class="btn btn-outline-warning btn-block flat">Open an account</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of banner -->
+
+    <!-- banner -->
+    <div class="desktop">
+        <!-- navigation -->
+        <nav class="navigation desktop">
+            <div class="container">
+                <div class="row">
+
+                    <!-- icon -->
+                    <div class="col-1">
+                        <span class="fas fa-bars" id="nav-menu-icon" onclick="openNav()"></span>
+                    </div>
+                    <!-- open an account nav -->
+                    <div class="col-2" id="open-account-nav">
+                        <a href="register.html" class="">Open an account</a>
                     </div>
                     <!-- logo -->
                     <div class="col-5" id="logo-nav">
@@ -113,10 +241,10 @@
                     <img src="./static/img/banner-wallpaper.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./static/img/Luxury-Life-Wallpaper-Billionaire-Lifestyle,-Hd-Wallpapers-.jpg" class="d-block h-50">
+                    <img src="./static/img/armen-banner-img.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="./static/img/pexels-andrea-piacquadio-840996.jpg" class="d-block w-100" alt="...">
+                    <img src="./static/img/update-credit-score.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="row">
                     <!-- login form -->
@@ -155,9 +283,6 @@
 
                 </div>
             </div>
-        </div>
-        <div class="container">
-
         </div>
     </div>
     <!-- end of banner -->
