--- a/frontend/index copy.html
+++ b/frontend/index copy.html
@@ -19,7 +19,7 @@
 
     <!-- main css file -->
     <link rel="stylesheet" href="./static/css/style.css">
-    <link rel="stylesheet" href="./static/css/main.css">
+    <!-- <link rel="stylesheet" href="./static/css/main.css"> -->
 
     <!-- owl carousel -->
     <!-- css -->
@@ -90,9 +90,11 @@
                     </div>
                     <!-- logo -->
                     <div class="col-5" id="logo-nav">
+                        <a href="">
+                            <img src="./static/img/logo_transparent.png" alt="">
+                        </a>
                         <!-- <h3>Armen Finance</h3> -->
                         <!-- insert logo her -->
-                        <img src="./static/img/logo_transparent.png" alt="">
                     </div>
 
                     <!-- LOGIN -->
